Don't allow the window be snapped to a position that is smaller than its minimum size.

Changes:
1. Change the rule of finding the closest fixed position ratio.
2. Show the black scrim when the divider passes over the window's minimum size.

Test: SplitViewControllerTest.DividerPositionWithWindowMinimumSizeTest
Bug: 775227
Change-Id: Ia7ca6b42639a2e8963d5bfb95eb449e520f048fa